--- a/android/build.gradle
+++ b/android/build.gradle
@@ -95,5 +95,6 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation("com.intuit.fuzzymatcher:fuzzy-matcher:1.0.1")
 }
 
