--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "react-native-builder-bob": "^0.30.3",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
-    "typescript": "^5.2.2"
+    "typescript": "5.6.3"
   },
   "resolutions": {
     "@types/react": "^18.2.44"
